Hide the header by default

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
     </div>
 </div>
-<header id="main-header" data-bind="if:allow_edit">
+<header id="main-header" data-bind="if:allow_edit" style="visibility: hidden;">
     <div id="admin-bar">
         <div id="admin-menu">
             <div id="board-tools">
